<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AdviceActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share_tech_mono"
        android:text="@string/warning"
        android:textSize="36sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/share_tech_mono"
        android:text="Don't forget to connect with Chappie"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share_tech_mono"
        android:text="@string/to_connect"
        android:textSize="14sp"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/buttonUsb"
            android:layout_width="152dp"
            android:layout_height="152dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_usb"
            android:background="@drawable/rounded_borders" />

        <ImageButton
            android:id="@+id/buttonBluetooth"
            android:layout_width="152dp"
            android:layout_height="152dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_bluetooth"
            android:background="@drawable/rounded_borders" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textViewConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono"
            android:text="@string/connected"
            android:textColor="@color/lightblue"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewConnected"
            app:layout_constraintStart_toStartOf="@+id/textViewConnected"
            app:layout_constraintTop_toTopOf="@+id/textViewConnected" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>